# Version

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: conf.py
examples/: basic_usage.py
src/version/: __init__.py  version.py
