[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Version"
version = "1.0.0"
authors = [
    { name = "Darkangel", email = "llopnin@gmail.com" },
]
description = "Makes it easier to work with versions for your projects."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["library", "awesome", "python"]
dependencies = []

[project.urls]
Homepage = "https://github.com/yourusername/my_awesome_library"
Repository = "https://github.com/yourusername/my_awesome_library"
Issues = "https://github.com/yourusername/my_awesome_library/issues"

[tool.setuptools.packages]
find = {}